# BusesRamdomForest

./: .firebaserc.example  .gitignore  README.md  firebase.json  pyproject.toml
functions/: main.py  requirements.txt
ingestion/: .env.example  parkingOcupation.py  trafic.py  weather.py
training/: train_model.py
